fix the stupid z-index bug!

--- a/src/studio/animationTimeline/components/Content/BoxView.css
+++ b/src/studio/animationTimeline/components/Content/BoxView.css
@@ -57,7 +57,7 @@
   left: 0;
   top: 0;
   bottom: 0;
-  z-index: 0;
+  z-index: 1;
 
   &:hover {
     width: fit-content;
@@ -70,6 +70,7 @@
   top: 0;
   left: 30px;
   overflow: hidden;
+  z-index: 0;
 }
 
 .timeGrid {
